# CRAG-ARAG

./: .env  .gitignore  app.py  pyproject.toml  requirements.txt
data/: customer_support_kb.txt  documentation.txt
langgraph_test/: basic_graph.ipynb
src/langgraphagenticai/ui/: uiconfigfile.ini
src/langgraphagenticai/ui/streamlit/: display_result.py  loadui.py  uiconfig.ini
test_rag/: 4-AdaptiveRAG.ipynb  correctiverag.ipynb  rag_agent.ipynb
test_rag/claimate_db/: index.faiss  index.pkl
test_rag/customer_it_support_db/: index.faiss  index.pkl
test_rag/film_db/: index.faiss  index.pkl
