[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-cohere>=0.5.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.14",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.8",
    "lxml>=6.1.0",
    "pymupdf>=1.27.2.2",
    "rank-bm25>=0.2.2",
    "structlog>=25.5.0",
    "wikipedia>=1.4.0",
    "yfinance>=1.3.0",
    "youtube-search>=2.2.0",
    "youtube-search-python>=1.6.6",
]
